--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <div id="mySidenav" class="sidenav">
-  <a href="#" id="sobre">Sobre</a>
+  <a href="sobre.html" id="sobre">Sobre</a>
   <a href="#" id="reserva">Reserva</a>
   <a href="#" id="contatos">Contatos</a>
 </div>
