--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,7 @@
   <a href="#" id="reserva">Reserva</a>
   <a href="#" id="contatos">Contatos</a>
 
-<h1>Sobre o nosso site</h1>
+<h1 style="margin-left:80px; >Sobre o nosso site</h1>
 <p>Este é um site de reserva para o restaurante.</p>
 <p>Para fazer sua reserva em nosso restaurante, basta clicar no botão "RESERVA" ao lado.</p>
 
