--- a/sobre.html
+++ b/sobre.html
@@ -44,9 +44,9 @@
   <a href="#" id="reserva">Reserva</a>
   <a href="#" id="contatos">Contatos</a>
 
-<h1 style="margin-left:80px; >Sobre o nosso site</h1>
-<p>Este é um site de reserva para o restaurante.</p>
-<p>Para fazer sua reserva em nosso restaurante, basta clicar no botão "RESERVA" ao lado.</p>
+<h1 style="margin-left:80px;">Sobre o nosso site</h1>
+<p style="margin-left:80px;">Este é um site de reserva para o restaurante.</p>
+<p style="margin-left:80px;">Para fazer sua reserva em nosso restaurante, basta clicar no botão "RESERVA" ao lado.</p>
 
 </body>
 </html>
