--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+er<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +41,7 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="sobre.html" id="sobre">Sobre</a>
-  <a href="#" id="reserva">Reserva</a>
+  <a href="reserva.html" id="reserva">Reserva</a>
   <a href="#" id="contatos">Contatos</a>
 </div>
 
