--- a/sobre.html
+++ b/sobre.html
@@ -41,8 +41,8 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="sobre.html" id="sobre">Sobre</a>
-  <a href="#" id="reserva">Reserva</a>
-  <a href="#" id="contatos">Contatos</a>
+  <a href="reserva.html" id="reserva">Reserva</a>
+  <a href="contato.html" id="contatos">Contatos</a>
 
 <h1 style="margin-left:80px;">Sobre o nosso site</h1>
 <p style="margin-left:80px;">Este é um site de reserva para o restaurante.</p>
