--- a/reserva.html
+++ b/reserva.html
@@ -1,12 +1,12 @@
 <form id="regForm" action="feito.html" method="GET">
-  <h1>Register:</h1>
+  <h1>Registro:</h1>
 
-  <div class="tab">Name:
+  <div class="tab">Nome:
     <p><input placeholder="Primeiro Nome" name="firstName"></p>
     <p><input placeholder="Sobrenome" name="lastName"></p>
   </div>
 
-  <div class="tab">Contact Info:
+  <div class="tab">Contato:
     <p><input placeholder="E-mail" name="email"></p>
     <p><input placeholder="Telefone" name="phone"></p>
   </div>
@@ -17,7 +17,7 @@
     <p><input placeholder="Horário" name="time"></p>
   </div>
 
-  <div class="tab">Login Info:
+  <div class="tab">Login:
     <p><input placeholder="Nome de usuário" name="username"></p>
     <p><input placeholder="Senha" type="password" name="password"></p>
   </div>
