--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="sobre.html" id="sobre">Sobre</a>
   <a href="reserva.html" id="reserva">Reserva</a>
-  <a href="#" id="contatos">Contatos</a>
+  <a href="contato.html" id="contatos">Contatos</a>
 </div>
 
 <div style="margin-left:80px;">
