--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
 </div>
 
 <div style="margin-left:80px;">
-  <h2>BCaso esteja com alguma duvida, entre em contato com nosso suporte em:</h2>
+  <h2>Caso esteja com alguma duvida, entre em contato com nosso suporte em:</h2>
   <p>Fone: 4002-8922</p>
   <p>Email: restaaurante123@gmail.com </p>
 </div>
